--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/team-music-queue/jukebox/issues"
   },
-  "homepage": "https://github.com/team-music-queue/jukebox#readme"
+  "homepage": "https://github.com/team-music-queue/jukebox#readme",
+  "dependencies": {
+    "chance": "^1.1.8",
+    "socket.io": "^4.5.2",
+    "socket.io-client": "^4.5.2"
+  }
 }
