--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest --verbose --coverage",
-    "start": "node ndex.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -19,8 +19,10 @@
   },
   "homepage": "https://github.com/team-music-queue/jukebox#readme",
   "dependencies": {
-    "jest": "^29.1.2",
     "chance": "^1.1.8",
+    "express": "^4.18.1",
+    "jest": "^29.1.2",
+    "path": "^0.12.7",
     "socket.io": "^4.5.2",
     "socket.io-client": "^4.5.2"
   }
