--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/team-music-queue/jukebox#readme",
   "dependencies": {
     "chance": "^1.1.8",
+    "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "jest": "^29.1.2",
     "path": "^0.12.7",
