--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "homepage": "https://github.com/team-music-queue/jukebox#readme",
   "dependencies": {
+    "axios": "^1.1.3",
+    "base-64": "^1.0.0",
     "chance": "^1.1.8",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
