--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest --verbose --coverage",
     "start": "npm run build; node index.js",
     "start-dev": "npm run build; nodemon index.js",
-    "build": "esbuild client/app.js --bundle --minify --sourcemap --outfile=public/bundle.js"
+    "build": "esbuild client/app.js --bundle --sourcemap --outfile=public/bundle.js"
   },
   "repository": {
     "type": "git",
@@ -24,11 +24,15 @@
     "axios": "^1.1.3",
     "base-64": "^1.0.0",
     "chance": "^1.1.8",
+    "cookie-parser": "^1.4.6",
+    "cookiejs": "^2.1.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "path": "^0.12.7",
+    "sequelize": "^6.25.2",
     "socket.io": "^4.5.2",
-    "socket.io-client": "^4.5.2"
+    "socket.io-client": "^4.5.2",
+    "sqlite3": "^5.1.2"
   },
   "devDependencies": {
     "@jest/types": "^29.2.0",
