--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@jest/types": "^29.2.0",
     "esbuild": "^0.15.11",
     "jest": "^29.1.2",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "supertest": "^6.3.0"
   }
 }
