--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "esbuild": "^0.15.11",
     "jest": "^29.1.2",
     "nodemon": "^2.0.20",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "supertest": "^6.3.0"
   }
 }
