--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
   "dependencies": {
     "axios": "^1.1.3",
     "base-64": "^1.0.0",
+    "bcrypt": "^5.1.0",
     "chance": "^1.1.8",
     "cookie-parser": "^1.4.6",
     "cookiejs": "^2.1.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "path": "^0.12.7",
     "sequelize": "^6.25.2",
     "socket.io": "^4.5.2",
